tests/loners/loners.exp
Error --------------------------------------------------------------------------------------------------- loners.js:2:11

Cannot get `o.z` because property `z` is missing in object literal [1]. [prop-missing]

   loners.js:2:11
   2| var z = o.z;
                ^

References:
   loners.js:1:9
   1| var o = { x: 5, y: "jello" };
              ^^^^^^^^^^^^^^^^^^^^ [1]



Found 1 error
